src/public/style.css
:root {
  --neutral-color-1: hsl(0, 0%, 6%);
  --neutral-color-2: hsl(0, 0%, 12%);
  --neutral-color-3: hsl(0, 0%, 24%);
  --neutral-color-4: hsl(0, 0%, 30%);
  --neutral-color-5: hsl(0, 0%, 50%);
  --neutral-color-6: hsl(0, 0%, 70%);
  --neutral-color-7: hsl(0, 0%, 76%);
  --neutral-color-8: hsl(0, 0%, 88%);
  --neutral-color-9: hsl(0, 0%, 94%);
}

* {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  color: var(--neutral-color-8);

  margin: 0;
  padding: 0;
}

body {
  background-color: var(--neutral-color-1);
}

header {
  background-color: var(--neutral-color-2);
}

h1 {
  font-size: 24px;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.flex-row-right {
  display: flex;
  flex-direction: row-reverse;
}

.width-fill-max {
  gap: 8px;
  width: 100%;
}

.sidebar {
  gap: 16px;
  width: 400px;
}

.sidebar-small {
  gap: 16px;
  width: fit-content;
}

.input-secondary,
.button-secondary {
  background-color: transparent;

  border: 1px solid var(--neutral-color-4);
  border-radius: 8px;
  padding: 8px;

  transition: border-color 0.15s ease-out;
}

.input-secondary:hover,
.button-secondary:hover {
  border-color: var(--neutral-color-5);
}

.input-secondary {
  background-color: var(--neutral-color-1);
}

.button-secondary {
  background-color: var(--neutral-color-2);
}

.button-secondary:active {
  background-color: var(--neutral-color-3);
}

.button-secondary:disabled {
  background-color: var(--neutral-color-1);
  border-color: var(--neutral-color-3);
}

.button-tertiary {
  background-color: var(--neutral-color-2);
  border: 0;
  border-radius: 8px;
  padding: 4px;
}

.button-tertiary:hover {
  background-color: var(--neutral-color-3);
}

.button-tertiary:active {
  background-color: var(--neutral-color-1);
}

.button-destructive {
  background-color: rgb(200, 0, 0);
  font-weight: bold;
  border: 0;
}

.button-icon {
  aspect-ratio: 1;
  padding: 4px;
}

.path-icon {
  fill: var(--neutral-color-8);
}

.popup-form {
  margin: auto;

  justify-content: center;
  align-items: center;
  gap: 8px;
  height: 100vh;
}

/* Pulse effect */
.pulse-container {
  position: relative;
  width: 20px;
  height: 20px;
}

.circle {
  border-radius: 50%;
  position: absolute;

  width: 10px;
  height: 10px;
  transform: translateX(50%) translateY(50%);
}

.circle-active {
  background-color: rgb(40, 220, 0);
}

.circle-inactive {
  background-color: rgb(220, 40, 20);
}

.pulse {
  background-color: rgb(40, 220, 0);
  border-radius: 50%;
  opacity: 0;

  position: absolute;
  height: 20px;
  width: 20px;

  animation: pulse 2s ease-in-out infinite;
}

@keyframes pulse {
  0% {
    transform: scale(0, 0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: scale(1, 1);
    opacity: 0;
  }
}

/* Components */

#header-body-layout {
  height: 100vh;
}

#main-app-layout {
  height: 100%;
  gap: 32px;
  margin: 32px;
}

.side-column {
  gap: 8px;
  width: 400px;
}

#story-content {
  height: 100%;
  overflow-y: auto;
}

#story-content > * {
  margin-bottom: 16px;
}

#story-content[contenteditable="false"] {
  background-color: black;
  border-color: var(--neutral-color-3);
}

/* Darken icons when buttons are disabled. Currently used only for specific action bar buttons */
button:disabled .path-icon {
  fill: var(--neutral-color-5);
}

#endpoint-status-indicator {
  align-items: center;
}

#header-left,
#header-right {
  margin: 8px;
  gap: 8px;
}

#login-form {
  width: 400px;
  flex-grow: 1;
}

/* A hack to align the label and input */
#login-form > label {
  transform: translateX(-8px);
}

#login-form > input,
#login-form > label {
  width: 100%;
}

/* Settings */
#settings-layout {
  height: 100vh;
}

/* Settings sidebar */
#settings-sidebar {
  padding: 16px;
  background-color: var(--neutral-color-2);
  border-right: 1px solid var(--neutral-color-3);
}

#settings-sidebar > button {
  padding: 16px;
  text-align: left;
}

/* Settings section */
.settings-section {
  padding: 16px;
  height: calc(100% - 32px);
}

/* Endpoints */
#settings-endpoints-section {
  gap: 16px;
}

#settings-endpoints-list {
  padding: 16px 64px;
  gap: 16px;
}

#settings-endpoints-editor {
  padding: 16px;
  height: 100%;
  gap: 16px;

  background-color: var(--neutral-color-2);
  border: 1px solid var(--neutral-color-3);
  border-radius: 8px;
}

#settings-selected-endpoint-card {
  border-color: rgb(0, 200, 255);
  background-color: rgb(0, 50, 100);
}

#settings-endpoints-editor-actions {
  gap: 8px;
}

#settings-endpoints-editor-actions button {
  flex-grow: 1;
}

